--- a/myntraProject/index.css
+++ b/myntraProject/index.css
@@ -1,9 +1,3 @@
-/* /* This is external styling 
-widely used in actual projects.
-
-h1 {
-  color: blue;
+header {
+  display: flex;
 }
-p {
-  color: rgb(128, 102, 0);
-} */
