added font family of myntra website in project

--- a/myntraProject/index.css
+++ b/myntraProject/index.css
@@ -1,3 +1,11 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Assistant, -apple-system, system-ui, -apple-system,
+    BlinkMacSystemFont, Roboto, Helvetica, Arial, sans-serif;
+}
 header {
   display: flex;
+  background-color: #ffffff;
+  height: 80px;
 }
