--- a/myntraProject/index.css
+++ b/myntraProject/index.css
@@ -6,6 +6,11 @@
 }
 header {
   display: flex;
-  background-color: #ffffff;
+  background-color: peachpuff;
   height: 80px;
+}
+
+.myntra_home {
+  height: 36px;
+  width: 53px;
 }
