added magin , space between elements and adjusted in center,home logo image deleted width

--- a/myntraProject/index.css
+++ b/myntraProject/index.css
@@ -8,9 +8,19 @@ header {
   display: flex;
   background-color: peachpuff;
   height: 80px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .myntra_home {
-  height: 36px;
-  width: 53px;
+  height: 45px;
+  /* because it is image so by giving height , it will work */
+  /* width: 53px; */
+}
+.logo_container {
+  margin-left: 4%;
+}
+
+.action_bar {
+  margin-right: 4%;
 }
