defined min width and justify content for internal spacing between elements

--- a/myntraProject/index.css
+++ b/myntraProject/index.css
@@ -24,3 +24,9 @@ header {
 .action_bar {
   margin-right: 4%;
 }
+
+.nav_bar {
+  display: flex;
+  min-width: 500px;
+  justify-content: space-between;
+}
