--- a/myntraProject/index.css
+++ b/myntraProject/index.css
@@ -55,7 +55,9 @@ header {
   align-items: center;
 }
 .search_icon {
+  box-sizing: content-box;
   height: 21px;
+  padding: 10px;
 }
 .search_input {
   color: #696e79;
