--- a/myntraProject/index.css
+++ b/myntraProject/index.css
@@ -58,6 +58,8 @@ header {
   box-sizing: content-box;
   height: 21px;
   padding: 10px;
+  background-color: #f5f5f6;
+  color: #282c3f;
 }
 .search_input {
   color: #696e79;
