--- a/myntraProject/index.css
+++ b/myntraProject/index.css
@@ -60,6 +60,8 @@ header {
   padding: 10px;
   background-color: #f5f5f6;
   color: #282c3f;
+  border-radius: 4px 0 0 4px;
+  font-weight: 300;
 }
 .search_input {
   color: #696e79;
