--- a/myntraProject/index.css
+++ b/myntraProject/index.css
@@ -71,3 +71,15 @@ header {
   border: 0;
   border-radius: 0 4px 4px 0;
 }
+
+.action_bar {
+  display: flex;
+  min-width: 200px;
+  justify-content: space-evenly;
+}
+
+.action_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
