--- a/myntraProject/index.css
+++ b/myntraProject/index.css
@@ -7,10 +7,11 @@
 }
 header {
   display: flex;
-  background-color: peachpuff;
+  background-color: #ffffff;
   height: 80px;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid #b6b1b1;
 }
 
 .myntra_home {
@@ -50,7 +51,8 @@ header {
 
 .search_bar {
   height: 40px;
-  min-width: 400px;
+  min-width: 200px;
+  width: 30%;
   display: flex;
   align-items: center;
 }
@@ -82,4 +84,5 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 14px;
 }
