--- a/myntraProject/index.css
+++ b/myntraProject/index.css
@@ -101,3 +101,13 @@ header {
 .banner_image {
   width: 100%;
 }
+
+.category_heading {
+  text-transform: uppercase;
+  color: #3e4152;
+  letter-spacing: 0.15em;
+  font-size: 1.8em;
+  margin: 50px 0 10px 30px;
+  max-height: 5em;
+  font-weight: 700;
+}
