--- a/myntraProject/index.css
+++ b/myntraProject/index.css
@@ -120,3 +120,33 @@ header {
 .sale_item {
   width: 250px;
 }
+
+.footer_container {
+  padding: 30px 0 40px 0;
+  background-color: #fafbfc;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.footer_column {
+  display: flex;
+  flex-direction: column;
+}
+.footer_column h3 {
+  color: #282c3f;
+  font-size: 14px;
+  margin-bottom: 25px;
+}
+.footer_column a {
+  color: #696b79;
+  display: block;
+  font-size: 15px;
+  padding-bottom: 5px;
+  text-decoration: none;
+}
+
+.copyright {
+  color: #2f2f30;
+  text-align: end;
+  padding: 4px;
+}
